# cfa-subgroup-imputer

./: .pre-commit-config.yaml  README.md  demo_ages.py  demo_individuals.py  mkdocs.yaml  pyproject.toml
.github/workflows/: mkdocs.yaml  pre-commit.yaml  run-pytest.yaml
docs/: api.md  deprecation.md  examples.md  index.md
src/cfa_subgroup_imputer/: __main__.py  attributor.py  enumerator.py  groups.py  imputer.py  json.py  mapping.py  one_dimensional.py  polars.py  utils.py  variables.py
tests/: test_aggregator.py  test_disaggregator.py  test_enumeration.py  test_groups.py  test_handlers.py  test_json.py  test_polars.py  test_utils.py  test_variables.py
