[project]
name = "cfa-subgroup-imputer"
version = "0.1.0"
description = "A package for imputing subgroups from supergroups."
readme = "README.md"
authors = [{name = "Andrew Magee", email = "rzg0@cdc.gov"}]
requires-python = ">=3.12"
dependencies = [
    "polars>=1.31.0",
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "markdown-callouts>=0.4.0",
    "mdx-truly-sane-lists>=1.3",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.15",
    "mkdocstrings[python]>=0.29.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "ruff>=0.12.2",
]
